--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "uploadPlugin.js",
+  "types": "uploadPlugin.d.ts",
   "scripts": {
     "build": "webpack",
+    "ts": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.7.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "form-data": "^4.0.0",
+    "typescript": "^4.3.5",
     "webpack": "^5.42.0"
-  },
-  "devDependencies": {
-    "webpack-cli": "^4.7.2"
   }
 }
