--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "author": "zenglincient",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "webpack-cli": "^4.7.2",
-    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "form-data": "^4.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.42.0"
   }
